--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,8 +1,6 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET
-
 on:
   push:
     branches: [ "dev" ]
@@ -10,7 +8,7 @@ on:
     branches: [ "dev" ]
 
 jobs:
-  netcore:
+  net8:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -25,7 +23,7 @@ jobs:
       - name: Run tests
         run: dotnet test --framework net8.0 --configuration Release --no-build --verbosity normal
 
-  netframework:
+  net462:
     runs-on: windows-latest
     steps:
       - name: Setup .NET Framework 4.6.2
@@ -33,6 +31,6 @@ jobs:
         with:
            dotnet-version: 4.6.2
       - name: Build
-        run: msbuild HtmlToOpenXml.sln /p:Configuration=Release
+        run: msbuild test\HtmlToOpenXml.Tests/HtmlToOpenXml.Tests.dll /p:Configuration=Release
       - name: Run tests (NET Framework)
-        run: vstest.console.exe /test/HtmlToOpenXml.Tests/HtmlToOpenXml.Tests.dll
+        run: vstest.console.exe test\HtmlToOpenXml.Tests/HtmlToOpenXml.Tests.dll
