--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,6 +1,8 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
+name: 'dotnet.yml'
+
 on:
   push:
     branches: [ "dev" ]
@@ -31,6 +33,6 @@ jobs:
         with:
            dotnet-version: 4.6.2
       - name: Build
-        run: msbuild test\HtmlToOpenXml.Tests/HtmlToOpenXml.Tests.dll /p:Configuration=Release
+        run: msbuild ${{github.workspace}}/HtmlToOpenXml.sln /p:Configuration=Release
       - name: Run tests (NET Framework)
-        run: vstest.console.exe test\HtmlToOpenXml.Tests/HtmlToOpenXml.Tests.dll
+        run: vstest.console.exe test\HtmlToOpenXml.Tests\HtmlToOpenXml.Tests.dll
