--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,11 +28,12 @@ jobs:
   net462:
     runs-on: windows-latest
     steps:
+      - uses: actions/checkout@v4
       - name: Setup .NET Framework 4.6.2
         uses: microsoft/setup-msbuild@v2
         with:
            dotnet-version: 4.6.2
       - name: Build
-        run: msbuild ${{github.workspace}}/HtmlToOpenXml.sln /p:Configuration=Release
+        run: msbuild HtmlToOpenXml.sln /p:Configuration=Release
       - name: Run tests (NET Framework)
         run: vstest.console.exe test\HtmlToOpenXml.Tests\HtmlToOpenXml.Tests.dll
