--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,11 +29,9 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Setup .NET Framework 4.6.2
+      - name: Setup .NET Framework
         uses: microsoft/setup-msbuild@v2
-        with:
-           dotnet-version: 4.6.2
       - name: Build
-        run: msbuild HtmlToOpenXml.sln /p:Configuration=Release
+        run: msbuild HtmlToOpenXml.sln /p:Configuration=Release /p:TargetFramework=net462 /restore
       - name: Run tests (NET Framework)
         run: vstest.console.exe test\HtmlToOpenXml.Tests\HtmlToOpenXml.Tests.dll
